samples/_failures_safe/1761164133_b1e9a2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47956df4.c: In function ‘main’:
./samples/SAFE/__tmp_47956df4.c:145:5: error: expected declaration or statement at end of input
  145 |     return 0;
      |     ^~~~~~
